# vstools

./: .editorconfig  .gitignore  Changelog  EvalProps.cs  EvalProps.targets  GUIDELINES.using-directive.md  QtCppConfig.props  README  README.md  common.tt  references.props  targetframework.props  transform.targets  version.targets  version.tt  vstools.bat  vstools.pri  vstools.pri_TT  vstools.pro  vstools.sln
.github/ISSUE_TEMPLATE/: bug.md
QMakeFileReader/: evalhandler.cpp  evalhandler.h  main.cpp  qmakedataprovider.cpp  qmakedataprovider.h  qmakefilereader.vcxproj
QMakeFileReader/evaluator/: ioutils.cpp  ioutils.h  proitems.cpp  proitems.h  qmake_global.h  qmakebuiltins.cpp  qmakeevaluator.cpp  qmakeevaluator.h  qmakeevaluator_p.h  qmakeglobals.cpp  qmakeglobals.h  qmakeparser.cpp  qmakeparser.h
QrcEditor/: main.cpp  mainwindow.cpp  mainwindow.h  qrceditor.rc  qrceditor.vcxproj
QrcEditor/shared/: qrceditor.cpp  qrceditor.h  qrceditor.pri  resourcefile.cpp  resourcefile_p.h  resourceview.cpp  resourceview.h  undocommands.cpp  undocommands_p.h
Qt4VS2003/: Qt4VSAddin2005.sln  Qt4VSAddin2008.sln  Qt4VSAddin2010.sln  Qt5VSAddin2008.sln  Qt5VSAddin2010.sln  Qt5VSAddin2012.sln  Qt5VSAddin2013.sln  Qt5VSAddin2015.sln  Templates.txt  collectInstallerFiles.bat  collectInstallerFiles.pl  createCultureResources.cmd  createUserFiles.bat  createUserFiles.pl  createWizardFiles.bat  createWizardFiles.pl
Qt4VS2003/Doc/: .gitignore  classic.css  externallinks.qdoc  vs-addin.qdoc  vs-addin.qdocconf
Qt4VS2003/Qt4VSAddin/: AddInEventHandler.cs  AddQtVersionDialog.cs  AddTranslationDialog.cs  AddinInit.cs  AssemblyInfo.cs  Changes-1.0.1  Changes-1.0.2  Changes-1.1.0  Changes-1.1.1  Changes-1.1.10  Changes-1.1.11  Changes-1.1.2  Changes-1.1.3  Changes-1.1.4  Changes-1.1.5  Changes-1.1.6  Changes-1.1.7  Changes-1.1.8  Changes-1.1.9  Changes-1.2.0  Changes-1.2.1  Changes-1.2.2  Changes-1.2.3  Changes-1.2.4  Changes-1.2.5  CommandBar.resx  Connect.cs  ExtLoader.cs  FormChangeQtVersion.Designer.cs  FormChangeQtVersion.cs  FormProjectQtSettings.Designer.cs  FormProjectQtSettings.cs  FormVSQtSettings.Designer.cs  FormVSQtSettings.cs  QMakeWrapper.cs  Qt4VSAddin.AddIn  Qt4VSAddin2005.csproj  Qt4VSAddin2008.csproj  Qt4VSAddin2010.csproj  (+23 more)
QtMSBuild/: ITaskLoggingHelper.cs  QtMSBuild.csproj
QtVsTest/: Macro.cs  MacroClient.h  MacroParser.cs  MacroServer.cs  QtVsTest.cs  QtVsTest.csproj  csmacro.tmLanguage_TT  csmacro.tmTheme_TT  source.extension.vsixmanifest_TT
QtVsTools.Core/: BuildConfig.cs  CommandLineParser.cs  CompilerToolWrapper.cs  CxxStream.cs  CxxStreamReader.cs  ExportProjectDialog.cs  ExportProjectDialog.resx  Extensions.cs  FakeFilter.cs  FilesToList.cs  Filters.cs  HelperFunctions.cs  ImageButton.cs  InfoDialog.cs  LinkerToolWrapper.cs  MainWinWrapper.cs  Messages.cs  MocCmdChecker.cs  MsBuildProject.cs  Notifications.cs  Observable.cs  OutputWindowPane.cs  ProFileContent.cs  ProFileOption.cs  ProSolution.cs  ProjectExporter.cs  ProjectFormat.cs  ProjectImporter.cs  ProjectMacros.cs  QMake.cs  QMakeConf.cs  QMakeImport.cs  QMakeQuery.cs  QrcItem.cs  QrcParser.cs  QrcPrefix.cs  QtBuildTool.cs  QtBuildToolQuery.cs  QtConfig.cs  QtCustomBuildTool.cs  (+22 more)
QtVsTools.Package/: QtMenus.cs  QtMenus.vsct  QtMenus.vsct_TT  QtVersionId.vsct_TT  QtVsTools.Icons.pkgdef  QtVsTools.Package.csproj  QtVsTools.Qml.Debug.pkgdef  QtVsTools.Snippets.pkgdef  QtVsToolsPackage.cs  Resources.resx  VSPackage.resx  Vsix.cs  qt5.natvis.xml  qt6.natvis.xml  qt6modules.xml  qtmodules.xml  source.extension.vsixmanifest_TT
QtVsTools.RegExpr/: QtVsTools.RegExpr.csproj
QtVsTools.TestAdapter/: Binary.cs  Logger.cs  PdbParser.cs  ProcessMonitor.cs  QtTestDiscoverer.cs  QtTestExecutor.cs  QtTestGlobalSettingsProvider.cs  QtTestPage.cs  QtTestPageSettings.cs  QtTestResult.cs  QtTestSettings.cs  QtTestSettings.xsd  QtTestSettingsProvider.cs  QtVsTools.TestAdapter.csproj  Resources.cs  SourceInfo.cs  XmlParser.cs
QtVsTools.Wizards/: QtVsTools.Wizards.csproj
Templates/designer/: CMakeLists.txt  QtTemplate.Project.Designer.csproj  designer.vcxproj  designer.vcxproj.filters  designer.vstemplate_TT  plugin.h  widget.h
Templates/designer/Properties/: AssemblyInfo.cs
Templates/empty/: CMakeLists.txt  QtTemplate.Project.Empty.csproj  empty.vcxproj  empty.vstemplate_TT
Templates/empty/Properties/: AssemblyInfo.cs
Templates/gui/: CMakeLists.txt  QtTemplate.Project.Gui.csproj  gui.vcxproj  gui.vcxproj.filters  gui.vstemplate_TT  main.cpp  widget.cpp  widget.h  widget.qrc  widget.ui
Templates/gui/Properties/: AssemblyInfo.cs
Templates/lib/: CMakeLists.txt  CMakeUserPresets.json  QtTemplate.Project.Lib.csproj  global.h  lib.vcxproj  lib.vcxproj.filters  lib.vstemplate_TT  qt.cmake  source.cpp
Templates/lib/Properties/: AssemblyInfo.cs
Templates/quick/: CMakeLists.txt  CMakePresets.json  QtTemplate.Project.Quick.csproj  main.cpp  main.qml  qml.qrc  quick.vcxproj  quick.vcxproj.filters  quick.vstemplate_TT
Templates/quick/Properties/: AssemblyInfo.cs
Templates/test/: .runsettings  CMakeLists.txt  QtTemplate.Project.Test.csproj  test.cpp  test.vcxproj  test.vcxproj.filters  test.vstemplate_TT
Templates/test/Properties/: AssemblyInfo.cs
Tests/ProjectFormats/CMake/QtClassLibrary/: CMakeLists.txt  CMakeUserPresets.json  QtClassLibrary.cpp  QtClassLibrary.h  qtclasslibrary_global.h
Tests/ProjectFormats/CMake/QtWidgetsApplication/: CMakeLists.txt  QtWidgetsApplication.cpp  QtWidgetsApplication.h  QtWidgetsApplication.qrc  QtWidgetsApplication.ui  main.cpp
VsQml/: README  astvisitor.cpp  astvisitor.h  vsqml.cpp  vsqml.h  vsqml.vcxproj  vsqml_global.h  vsqmldebugclient.cpp  vsqmldebugclient.h
doc/: doc.pri  qtvstools-online.qdocconf  qtvstools.qdocconf
help/: collectHelpFiles.pl  createXML.pl  createdoc.bat  createdoc.pl  helptools.pro  patchYear.pl
src/: QtCppConfig.props  QtVsTools.sln  VS2013.References.targets  VS2015.References.targets  common.tt  src.pri  src.pro  transform.targets  version.targets  version.tt  vstools.bat
tools/: tools.pro
vsconfig/: 2017.vsconfig  2019.vsconfig  2022.vsconfig
(+1679 files in other folders)
